# src/SimpleAPI/bin/Debug/net8.0/swagger.json
@@ -109,24 +109,7 @@
         ],
         "responses": {
           "200": {
-            "description": "OK",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Song"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Song"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Song"
-                }
-              }
-            }
+            "description": "OK"
           }
         }
       }
